--- a/product_eval/css/main.css
+++ b/product_eval/css/main.css
@@ -124,8 +124,9 @@ fieldset ul li {
 
 #chartmain {
 	position: relative;
-	top: 100px;
+	top: 80px;
+	left: -100px;
 }
-td[id^="chart"]{
-	border: 2px solid black; 
+a {
+	text-decoration: none;
 }
